--- a/.env.example
+++ b/.env.example
@@ -30,8 +30,10 @@ MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
+MAIL_FROM_ADDRESS=stemcenter@ilimi.edu.ne
 MAIL_FROM_NAME="${APP_NAME}"
+
+POSTMARK_TOKEN="77baddb3-acfb-4c4d-a71e-8d50298e53b9"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
