--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "vue": "^2.6.12",
         "vue-confirm-dialog": "^1.0.2",
         "vue-fragment": "^1.5.2",
+        "vue-html2pdf": "^1.8.0",
         "vue-infinite-loading": "^2.4.5",
         "vue-meta": "^2.4.0",
         "vue-pdf-app": "^2.0.0",
